# VLA-video-data-annotation-tool

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
vla_video_annotator/: __init__.py  server.py
vla_video_annotator/static/: app.js  index.html  styles.css
